--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Geotagging Backend"
 APP_ENV=local
 APP_KEY=base64:U9aXk8Yt1sRtp7ZBUdXCtFYWAiSIpY+CGO66WYSbUdQ=
 APP_DEBUG=true
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=geotagging_db
+DB_DATABASE=geotagging_db2
 DB_USERNAME=root
 DB_PASSWORD=
 
